tests/ui/diagnostic_namespace/on_move/report_warning_on_non_adt.stderr
warning: the `diagnostic::on_move` attribute cannot be used on traits
  --> $DIR/report_warning_on_non_adt.rs:9:3
   |
LL | #[diagnostic::on_move(
   |   ^^^^^^^^^^^^^^^^^^^
   |
   = help: the `diagnostic::on_move` attribute can only be applied to data types
   = note: `#[warn(misplaced_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

error[E0382]: Foo
  --> $DIR/report_warning_on_non_adt.rs:21:15
   |
LL |     let foo = Foo;
   |         --- Bar
LL |     takes_foo(foo);
   |               --- value moved here
LL |     let bar = foo;
   |               ^^^ value used here after move
   |
note: consider changing this parameter type in function `takes_foo` to borrow instead if owning the value isn't necessary
  --> $DIR/report_warning_on_non_adt.rs:16:17
   |
LL | fn takes_foo(_: Foo) {}
   |    ---------    ^^^ this parameter takes ownership of the value
   |    |
   |    in this function
note: if `Foo` implemented `Clone`, you could clone the value
  --> $DIR/report_warning_on_non_adt.rs:7:1
   |
LL | struct Foo;
   | ^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     takes_foo(foo);
   |               --- you could clone this value

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0382`.
